<resources>
    <string name="app_name">Téarma.ie</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="search_terminology_easily">Search terminology easily</string>
    <string name="t_arma_ie" translatable="false">Téarma.ie</string>
    <string name="app_icon">App icon</string>
    <string name="en" translatable="false">en</string>
    <string name="about_paragraph">This app utilises the website Téarma.ie as a data-source to populate searches. The app and website came about as a solution to the awkwardness and the unnecessary amount of time spent on looking up words in a dictionary. This app aims to tackle that, allowing the user to search easily, and get instant, elegant responses in the form of cards.</string>
    <string name="search">Search</string>
    <string name="about">About</string>
    <string name="syzible" translatable="false">Syzible</string>
    <string name="web">Web</string>
    <string name="more">More</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="en_search_chosen">English search chosen</string>
    <string name="ga_search_chosen">Irish search chosen</string>
    <string name="getting_tod">Getting term of the day…</string>
    <string name="loading_results_for_term">Getting results for %1$s in %2$s</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
