<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/search"
            android:title="@string/search" />
        <!--<item
            android:id="@+id/nav_db"
            android:icon="@drawable/saved_words"
            android:title="Saved Words" />-->
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/share"
            android:title="@string/about" />
    </group>

    <item android:title="@string/syzible">
        <menu>
            <item
                android:id="@+id/nav_web"
                android:icon="@drawable/web"
                android:title="@string/web" />
            <item
                android:id="@+id/nav_more"
                android:icon="@drawable/smartphone"
                android:title="@string/more" />
        </menu>
    </item>

</menu>
